--- a/sdks/java/io/file-based-io-tests/pom.xml
+++ b/sdks/java/io/file-based-io-tests/pom.xml
@@ -31,6 +31,26 @@
     <name>Apache Beam :: SDKs :: Java :: IO :: File-based-io-tests</name>
     <description>Integration tests for reading/writing using file-based sources/sinks.</description>
 
+    <profiles>
+        <!-- Include the Google Cloud Dataflow runner activated by -DintegrationTestRunner=dataflow -->
+        <profile>
+            <id>dataflow-runner</id>
+            <activation>
+                <property>
+                    <name>integrationTestRunner</name>
+                    <value>dataflow</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.beam</groupId>
+                    <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.beam</groupId>
