Add PoC of reading and writing Parquet files with Spark and Flink runners

--- a/examples/java/build.gradle
+++ b/examples/java/build.gradle
@@ -42,6 +42,7 @@ configurations.sparkRunnerPreCommit {
 dependencies {
   compile library.java.guava
   shadow project(path: ":beam-sdks-java-core", configuration: "shadow")
+  shadow project(path: ":beam-sdks-java-io-parquet", configuration: "shadow")
   shadow project(path: ":beam-sdks-java-extensions-google-cloud-platform-core", configuration: "shadow")
   shadow project(path: ":beam-sdks-java-io-google-cloud-platform", configuration: "shadow")
   shadow library.java.google_api_client
