--- a/examples/java/pom.xml
+++ b/examples/java/pom.xml
@@ -55,6 +55,11 @@
           <artifactId>beam-runners-direct-java</artifactId>
           <scope>runtime</scope>
         </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-mapreduce-client-core</artifactId>
+          <version>2.7.3</version>
+        </dependency>
       </dependencies>
     </profile>
 
